read app info from package.json

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
         <script async src="script.js"></script>
     </head>
     <body>
-        Hi there!
+        <span id="meta">Loading ...</span>
+        <h1 id="title">Loading ...</h1>
+        <p>Hi there!</p>
     </body>
 </html>
